Update code style for new Java 20 and 21 features